Migrate A2DP Sink enable/disable to sysprops
Tag: #refactor
Bug: 217448211
Test: atest BluetoothInstrumentationTests
Merged-In: I3e2954432f5a65cbf4ca55c07b6b87ac9dd3f7b6
Change-Id: I3e2954432f5a65cbf4ca55c07b6b87ac9dd3f7b6

--- a/android/app/AndroidManifest.xml
+++ b/android/app/AndroidManifest.xml
@@ -103,6 +103,16 @@
             </intent-filter>
         </service>
 
+        <!--  Advanced Audio Distribution Profile (A2DP) sink Profile Service  -->
+        <service android:process="@string/process"
+             android:name="com.android.bluetooth.a2dpsink.A2dpSinkService"
+             android:enabled="true"
+             android:exported="true">
+            <intent-filter>
+                <action android:name="android.bluetooth.IBluetoothA2dpSink"/>
+            </intent-filter>
+        </service>
+
         <provider android:name=".opp.BluetoothOppProvider"
              android:authorities="com.android.bluetooth.opp"
              android:exported="true"
@@ -307,14 +317,6 @@
              android:exported="true">
             <intent-filter>
                 <action android:name="android.bluetooth.IBluetoothHeadset"/>
-            </intent-filter>
-        </service>
-        <service android:process="@string/process"
-             android:name=".a2dpsink.A2dpSinkService"
-             android:enabled="@bool/profile_supported_a2dp_sink"
-             android:exported="true">
-            <intent-filter>
-                <action android:name="android.bluetooth.IBluetoothA2dpSink"/>
             </intent-filter>
         </service>
         <service android:process="@string/process"
