Migrate AVRCP Target enable/disable to sysprops
Tag: #refactor
Bug: 217448211
Test: atest BluetoothInstrumentationTests
Merged-In: I2d3085fa1e4a660a1e78b3f8ab14359e0ea4b96e
Change-Id: I2d3085fa1e4a660a1e78b3f8ab14359e0ea4b96e

--- a/android/app/AndroidManifest.xml
+++ b/android/app/AndroidManifest.xml
@@ -113,6 +113,16 @@
             </intent-filter>
         </service>
 
+        <!--  Audio/Video Remote Control Profile (AVRCP) target Profile Service  -->
+        <service android:process="@string/process"
+             android:name="com.android.bluetooth.avrcp.AvrcpTargetService"
+             android:enabled="true"
+             android:exported="true">
+            <intent-filter>
+                <action android:name="android.bluetooth.IBluetoothAvrcp"/>
+            </intent-filter>
+        </service>
+
         <provider android:name=".opp.BluetoothOppProvider"
              android:authorities="com.android.bluetooth.opp"
              android:exported="true"
@@ -336,15 +346,6 @@
                 <action android:name="android.intent.action.APPLICATION_PREFERENCES"/>
             </intent-filter>
         </activity>
-
-        <service android:process="@string/process"
-             android:name=".avrcp.AvrcpTargetService"
-             android:enabled="@bool/profile_supported_avrcp_target"
-             android:exported="true">
-            <intent-filter>
-                <action android:name="android.bluetooth.IBluetoothAvrcp"/>
-            </intent-filter>
-        </service>
         <service android:process="@string/process"
              android:name=".avrcpcontroller.AvrcpControllerService"
              android:enabled="@bool/profile_supported_avrcp_controller"
