Migrate GATT enable/disable to sysprops
Tag: #refactor
Bug: 217448211
Test: atest BluetoothInstrumentationTests
Change-Id: Iabe4eeb815c7d426496039f97119088af049aca9

--- a/android/app/AndroidManifest.xml
+++ b/android/app/AndroidManifest.xml
@@ -199,6 +199,17 @@
             </intent-filter>
         </service>
 
+        <!--  Generic Attribute (GATT) Profile Service  -->
+        <service android:process="@string/process"
+             android:name="com.android.bluetooth.gatt.GattService"
+             android:enabled="true"
+             android:exported="true"
+             android:permission="android.permission.ACCESS_BLUETOOTH_SHARE">
+            <intent-filter>
+                <action android:name="android.bluetooth.IBluetoothGatt"/>
+            </intent-filter>
+        </service>
+
         <!--  Hearing Aid Profile (HAP) client Profile Service  -->
         <service android:process="@string/process"
              android:name="com.android.bluetooth.hap.HapClientService"
@@ -433,16 +444,7 @@
             </intent-filter>
         </service>
         <service android:process="@string/process"
-             android:name="com.android.bluetooth.gatt.GattService"
-             android:enabled="@bool/profile_supported_gatt"
-             android:exported="true"
-             android:permission="android.permission.ACCESS_BLUETOOTH_SHARE">
-            <intent-filter>
-                <action android:name="android.bluetooth.IBluetoothGatt"/>
-            </intent-filter>
-        </service>
-        <service android:process="@string/process"
-             android:name="com.android.bluetooth.hfp.HeadsetService"
+             android:name=".hfp.HeadsetService"
              android:enabled="@bool/profile_supported_hs_hfp"
              android:exported="true">
             <intent-filter>
