--- a/android/app/AndroidManifest.xml
+++ b/android/app/AndroidManifest.xml
@@ -200,6 +200,17 @@
             </intent-filter>
         </service>
 
+        <!--  Generic Attribute (GATT) Profile Service  -->
+        <service android:process="@string/process"
+             android:name="com.android.bluetooth.gatt.GattService"
+             android:enabled="true"
+             android:exported="true"
+             android:permission="android.permission.ACCESS_BLUETOOTH_SHARE">
+            <intent-filter>
+                <action android:name="android.bluetooth.IBluetoothGatt"/>
+            </intent-filter>
+        </service>
+
         <!--  Hearing Aid Profile (HAP) client Profile Service  -->
         <service android:process="@string/process"
              android:name="com.android.bluetooth.hap.HapClientService"
@@ -430,14 +441,6 @@
              android:exported="true">
             <intent-filter>
                 <action android:name="android.bluetooth.IBluetoothSap"/>
-            </intent-filter>
-        </service>
-        <service android:process="@string/process"
-             android:name=".gatt.GattService"
-             android:enabled="@bool/profile_supported_gatt"
-             android:exported="true">
-            <intent-filter>
-                <action android:name="android.bluetooth.IBluetoothGatt"/>
             </intent-filter>
         </service>
         <service android:process="@string/process"
