Migrate HID host/device enable/disable to sysprops
Tag: #refactor
Bug: 217448211
Test: atest BluetoothInstrumentationTest
s

Change-Id: I0d81eb91a6576818e0f83df7ac3a6bf0ac6c8b97

--- a/android/app/AndroidManifest.xml
+++ b/android/app/AndroidManifest.xml
@@ -220,6 +220,26 @@
             </intent-filter>
         </service>
 
+        <!--  Human Interface Device (HID) host Profile Service  -->
+        <service android:process="@string/process"
+             android:name="com.android.bluetooth.hid.HidHostService"
+             android:enabled="true"
+             android:exported="true">
+            <intent-filter>
+                <action android:name="android.bluetooth.IBluetoothHidHost"/>
+            </intent-filter>
+        </service>
+
+        <!--  Human Interface Device (HID) device Profile Service  -->
+        <service android:process="@string/process"
+             android:name="com.android.bluetooth.hid.HidDeviceService"
+             android:enabled="true"
+             android:exported="true">
+            <intent-filter>
+                <action android:name="android.bluetooth.IBluetoothHidDevice"/>
+            </intent-filter>
+        </service>
+
         <!--  Media Control Profile (MCP) server Profile Service  -->
         <service android:process="@string/process"
              android:name="com.android.bluetooth.mcp.McpService"
@@ -449,22 +469,6 @@
              android:exported="true">
             <intent-filter>
                 <action android:name="android.bluetooth.IBluetoothHeadset"/>
-            </intent-filter>
-        </service>
-        <service android:process="@string/process"
-             android:name=".hid.HidHostService"
-             android:enabled="@bool/profile_supported_hid_host"
-             android:exported="true">
-            <intent-filter>
-                <action android:name="android.bluetooth.IBluetoothHidHost"/>
-            </intent-filter>
-        </service>
-        <service android:process="@string/process"
-             android:name="com.android.bluetooth.hid.HidDeviceService"
-             android:enabled="@bool/profile_supported_hid_device"
-             android:exported="true">
-            <intent-filter>
-                <action android:name="android.bluetooth.IBluetoothHidDevice"/>
             </intent-filter>
         </service>
         <service
