--- a/android/app/AndroidManifest.xml
+++ b/android/app/AndroidManifest.xml
@@ -270,6 +270,31 @@
             </intent-filter>
         </service>
 
+        <!--  Message Access Profile (MAP) server Profile Service and owned Provider and Activiie  -->
+        <service android:process="@string/process"
+             android:name="com.android.bluetooth.map.BluetoothMapService"
+             android:enabled="true"
+             android:exported="true">
+            <intent-filter>
+                <action android:name="android.bluetooth.IBluetoothMap"/>
+                <action android:name="android.btmap.intent.action.SHOW_MAPS_SETTINGS"/>
+                <action android:name="com.android.bluetooth.map.USER_CONFIRM_TIMEOUT"/>
+            </intent-filter>
+        </service>
+        <activity android:name="com.android.bluetooth.map.BluetoothMapSettings"
+              android:process="@string/process"
+              android:label="@string/bluetooth_map_settings_title"
+              android:excludeFromRecents="true"
+              android:configChanges="orientation|keyboardHidden"
+              android:enabled="false">
+        </activity>
+        <provider android:name="com.android.bluetooth.map.MmsFileProvider"
+             android:authorities="com.android.bluetooth.map.MmsFileProvider"
+             android:enabled="false"
+             android:grantUriPermissions="true"
+             android:exported="false">
+        </provider>
+
         <!--  Media Control Profile (MCP) server Profile Service  -->
         <service android:process="@string/process"
              android:name="com.android.bluetooth.mcp.McpService"
@@ -453,29 +478,6 @@
                 <action android:name="android.bluetooth.IBluetoothPbap"/>
             </intent-filter>
         </service>
-        <service android:process="@string/process"
-             android:name=".map.BluetoothMapService"
-             android:enabled="@bool/profile_supported_map"
-             android:exported="true">
-            <intent-filter>
-                <action android:name="android.bluetooth.IBluetoothMap"/>
-                <action android:name="android.btmap.intent.action.SHOW_MAPS_SETTINGS"/>
-                <action android:name="com.android.bluetooth.map.USER_CONFIRM_TIMEOUT"/>
-            </intent-filter>
-        </service>
-         <activity android:name=".map.BluetoothMapSettings"
-              android:process="@string/process"
-              android:label="@string/bluetooth_map_settings_title"
-              android:excludeFromRecents="true"
-              android:configChanges="orientation|keyboardHidden"
-              android:enabled="@bool/profile_supported_map">
-        </activity>
-        <provider android:name=".map.MmsFileProvider"
-             android:authorities="com.android.bluetooth.map.MmsFileProvider"
-             android:enabled="true"
-             android:grantUriPermissions="true"
-             android:exported="false">
-        </provider>
         <service android:process="@string/process"
              android:name=".mapclient.MapClientService"
              android:enabled="@bool/profile_supported_mapmce"
