Migrate MAP client enable/disable to sysprops
Tag: #refactor
Bug: 217448211
Test: atest BluetoothInstrumentationTests
Merged-In: I8c399fde5bfe206393f45829a01e9cadf4c712bb
Change-Id: I0290136e1de8108e271c0556170477a4a4243a34

--- a/android/app/AndroidManifest.xml
+++ b/android/app/AndroidManifest.xml
@@ -295,6 +295,16 @@
              android:exported="false">
         </provider>
 
+        <!--  Message Access Profile (MAP) client Profile Service  -->
+        <service android:process="@string/process"
+             android:name="com.android.bluetooth.mapclient.MapClientService"
+             android:enabled="true"
+             android:exported="true">
+            <intent-filter>
+                <action android:name="android.bluetooth.IBluetoothMapClient"/>
+            </intent-filter>
+        </service>
+
         <!--  Media Control Profile (MCP) server Profile Service  -->
         <service android:process="@string/process"
              android:name="com.android.bluetooth.mcp.McpService"
@@ -476,14 +486,6 @@
              android:exported="true">
             <intent-filter>
                 <action android:name="android.bluetooth.IBluetoothPbap"/>
-            </intent-filter>
-        </service>
-        <service android:process="@string/process"
-             android:name=".mapclient.MapClientService"
-             android:enabled="@bool/profile_supported_mapmce"
-             android:exported="true">
-            <intent-filter>
-                <action android:name="android.bluetooth.IBluetoothMapClient"/>
             </intent-filter>
         </service>
         <service android:process="@string/process"
